--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="circle-container">
                   
                     <div class="circle">
-                        <a href="">
+                        <a href="https://shellamaelegaspi.github.io/WS02-MID1/">
                             <img class="circle-image" src="https://gifdb.com/images/high/cheerful-deku-hero-g7u0lvxqfbiubz95.gif" alt="Image 1">
                         </a>
                     </div>
