--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               </div>
             
              <div class="skills">
-              <center><h2>Monkey D. Luffy, Is the founder and captain of the increasingly infamous and powerful Straw Hat Pirates. </h2></center>
+            <h2 class="po3">Monkey D. Luffy, Is the founder and captain of the increasingly infamous and powerful Straw Hat Pirates. </h2>
              <h3 class="po2"> Most Powerful Abilities Of Monkey D. Luffy</h3>
               <ul class="po1">
 
@@ -47,7 +47,7 @@
             <center><img class="i1" src="https://wallpaper.dog/large/300126.jpg"></center>
             </img>
               </div>
-              <h2 class="hh1">One Piece</h2>
+              <center><img class="drew27" src="16.png"></center>
               <div class="content">
                   <h3>Publish Friends Websites</h3>
                 <div class="circle-container">
