--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </a>
                 </div>
                 <div class="circle">
-                    <a href="https://jayfordmiguel.github.io/WSO2-MID1/">
+                    <a href="https://alaizamaecoloma.github.io/WSO1-MID1/">
                         <img class="circle-image2" src="https://media.vanityfair.com/photos/5834768dca6f7ee00ec2908a/master/w_2560%2Cc_limit/moana-review.jpg" alt="Image 2">
                     </a>
                 </div>
